manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp1-82210889
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp1-82210889
  template:
    metadata:
      labels:
        app: sampleapp1-82210889
    spec:
      containers:
        - name: sampleapp1-82210889
          image: cepgbaseacr.azurecr.io/sampleapp1-82210889:latest
          ports:
            - containerPort: 8080
