manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp1-82210889-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: sampleapp1-82210889.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampleapp1-82210889
            port:
              number: 80
